Changed theme colours, button colours and created a button style.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/station"
-        android:contentDescription="station"/>
+        android:layout_weight="5"
+        android:contentDescription="station"
+        app:srcCompat="@drawable/station" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
@@ -29,6 +30,7 @@
 
         <Button
             android:id="@+id/college"
+            style="@style/MyGreenButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
