--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,12 @@
     <style name="Base.Theme.L04MoreImages2023" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="materialButtonStyle">@style/MyStyle</item>
     </style>
 
     <style name="Theme.L04MoreImages2023" parent="Base.Theme.L04MoreImages2023" />
+
+    <style name="MyStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/secondaryLightColor</item>
+    </style>
 </resources>
